--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource-variable/montserrat": "^5.0.16",
     "@fontsource-variable/open-sans": "^5.0.18",
     "@fontsource/twinkle-star": "^5.0.17",
+    "astro": "^4.5.12",
     "fuse.js": "^7.0.0",
     "sharp": "^0.33.1",
     "tailwindcss": "^3.3.5"
